# skis

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN-GUI.md  PLAN.md  README.md  TESTING.md  TODO.md
.claude/: settings.local.json
.claude/commands/: rules.md
.claude/skills/skis/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
.skis/: issues.db
docs/: coderules.md
docs/claude/: claude-cs.md  claude-js.md  claude-py.md  claude-rust.md
docs/coderules/: coderules-cs.md  coderules-js.md  coderules-py.md  coderules-rust.md
gui/src/: edit.css  edit.html  edit.js  index.html  main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
src/: error.rs  lib.rs  main.rs
src/commands/: init.rs  issue.rs  label.rs  log_path.rs  mod.rs
src/db/: connection.rs  migrations.rs  mod.rs  queries.rs
src/models/: comment.rs  issue.rs  label.rs  mod.rs
src/output/: format.rs  mod.rs
tests/: cli.rs  integration.rs
