[package]
name = "skis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skis"
path = "src/main.rs"

[lib]
name = "ski"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
colored = "2"
tabled = "0.15"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"
